--- a/PRC1949-1960/localisation/english/others_PRC_50s_Rework_l_english.yml
+++ b/PRC1949-1960/localisation/english/others_PRC_50s_Rework_l_english.yml
@@ -193,9 +193,15 @@
  ##ideas##
  PRC_50s_Illiteracy_everywhere:0 "Illiteracy Everywhere"
  PRC_50s_People_s_War_of_Liberation:0 "People's War of Liberation"
- PRC_50s_attack_kmt:0 "Attack Kuomintang"
  PRC_50s_Economic_ruin_caused_by_war:0 "Economic Ruin Caused by War"
  PRC_50s_Imperialist_forces:0 "Imperialist Forces"
+ PRC_bandit:0 "Acts of Banditry"
+ PRC_Nearly_Completed_Administration_Integration:0 "Nearly Completed Administration Integration"
+ PRC_Growing_Administration_Integration:0 "Growing Administration Integration"
+ PRC_Low_Administration_Integration:0 "Low Administration Integration"
+
+
+ PRC_50s_attack_kmt:0 "Attack Kuomintang"
  PRC_50s_Food_supply_crisis:0 "Food Supply Crisis"
  PRC_50s_Complete_Rural_Co_operation:0 "Accomplish Agricultural Co-operation"
  PRC_50s_three_anti_movement:0 "The Movement against the Three Evils"
@@ -223,6 +229,15 @@
  PRC_ledger_Chinese_People_s_Liberation_Army:0 "Chinese People's Liberation Army"
  PRC_50s_Heal_The_Wounds_of_War_idea:0 "Heal The Wounds of War"
  PRC_Blockade_by_the_Unite_States_Navy:0 "Blockade from USS Seventh Fleet"
+ 
+
+
+
+ ##dynamic_modifiers
+ PRC_PLA_Ground_Force:0 "PLA Ground Force"
+ PRC_PLA_Air_Force:0 "PLA Air Force"
+ PRC_PLA_Navy:0 "PLA Navy"
+
 
 
 
