--- a/PRC1949-1960/localisation/simp_chinese/others_PRC_50s_Rework_l_simp_chinese.yml
+++ b/PRC1949-1960/localisation/simp_chinese/others_PRC_50s_Rework_l_simp_chinese.yml
@@ -194,11 +194,17 @@
 
 
  ##ideas##
- PRC_50s_Illiteracy_everywhere:0 "匪患丛生"
+ PRC_50s_Illiteracy_everywhere:0 "文盲遍地"
  PRC_50s_People_s_War_of_Liberation:0 "人民解放战争"
- PRC_50s_attack_kmt:0 "进攻国民党"
- PRC_50s_Economic_ruin_caused_by_war:0 "战争造成的经济荒废"
+ PRC_50s_Economic_ruin_caused_by_war:0 "战争毁坏的经济"
  PRC_50s_Imperialist_forces:0 "帝国主义势力"
+ PRC_bandit:0 "匪患"
+ PRC_Nearly_Completed_Administration_Integration:0 "即将完成的行政整合"
+ PRC_Growing_Administration_Integration:0 "日益增长的行政整合"
+ PRC_Low_Administration_Integration:0 "低行政整合度"
+
+
+ PRC_50s_attack_kmt:0 "进攻国民党"
  PRC_50s_Food_supply_crisis:0 "食品供应危机"
  PRC_50s_Complete_Rural_Co_operation:0 "完成农业合作化"
  PRC_50s_three_anti_movement:0 "三反"
@@ -224,6 +230,14 @@
  PRC_Sino_Soviet_Polish_And_Hungarian_Events:0 "波匈事件"
  PRC_Sino_Soviet_friendship:0 "中苏友谊"
  PRC_ledger_Chinese_People_s_Liberation_Army:0 "中国人民解放军"
+ 
+
+
+
+ ##dynamic_modifiers
+ PRC_PLA_Ground_Force:0 "中国人民解放军陆军"
+ PRC_PLA_Air_Force:0 "中国人民解放军空军"
+ PRC_PLA_Navy:0 "中国人民解放军海军"
 
 
 
