50s翻新前的最新版
阿汤哥味大，无需多盐

--- a/PRC1949-1960/localisation/english/events_PRC_50s_Rework_l_english.yml
+++ b/PRC1949-1960/localisation/english/events_PRC_50s_Rework_l_english.yml
@@ -216,7 +216,7 @@
  PRC_50s_Rework_event.71.a:0 "Damn it, stop quickly!"
  PRC_50s_Rework_event.72.t:0 "Anti-Party Rhetoric from Students"
  PRC_50s_Rework_event.72.d:0 "The situation escalated when Liu Shaoqi's lengthy speech regarding the failed students was published in the People's Daily. Surprisingly, Liu's proposed solution for them was to go to the countryside and engage in labor, becoming educated peasants. This sparked dissatisfaction among the students of Hanyang Middle School, leading to a student strike and protest. With the support of some teachers, the students became even more fervent, even writing slogans such as "Welcome the return of the Kuomintang" that were against the Party. They began to target party and government institutions, resulting in clashes with government authorities. The students vandalized the county committee office and even broke the door of the county governor's office. Fortunately, the principal intervened in a timely manner and managed to stop the students, preventing the situation from escalating further."
- PRC_50s_Rework_event.72.a:0 "Want to rebellion？"
+ PRC_50s_Rework_event.72.a:0 "Want to rebellion?"
  PRC_50s_Rework_event.73.t:0 "Change the Electoral System"
  PRC_50s_Rework_event.73.d:0 "Members of the democratic parties are putting forward an increasing number of suggestions, and they are becoming more radical. Recently, members of the democratic parties published articles expressing their desire to reform the election system of the National People's Congress and establish genuine socialist democracy. They first criticize our current system as a false socialist democracy, with the party monopolizing the National People's Congress, resembling a version of one-party dictatorship, which fails to reflect the principle that the people are the masters of the country. They propose implementing direct and universal nationwide elections for the National People's Congress, allowing the people to freely organize new political parties and publish newspapers. Some even go so far as to suggest that different democratic parties that identify with socialism take turns in governance, selected freely by the masses."
  PRC_50s_Rework_event.73.a:0 "Don't go wild here"
@@ -521,15 +521,15 @@
  PRC_GLF_event.3.t:0 "The Criticism of the Opposition to Rash Advance"
  PRC_GLF_event.3.d:0 ""
  PRC_GLF_event.3.a:0 ""
- PRC_GLF_event.4.t:0 "Twelve-Year Programme for Agricultural Development"
- PRC_GLF_event.4.d:0 ""
- PRC_GLF_event.4.a:0 ""
- PRC_GLF_event.5.t:0 "Enquiries at Steel Production Meetings"
- PRC_GLF_event.5.d:0 ""
- PRC_GLF_event.5.a:0 ""Comrade President,doubling steel production is not an issue.""
- PRC_GLF_event.6.t:0 "Moving forward on the winds of agricultural cooperativization"
- PRC_GLF_event.6.d:0 ""
- PRC_GLF_event.6.a:0 "One day as twenty years"
+ PRC_GLF_event.4.t:0 "Agricultural Twelve-Year Development Outline"
+ PRC_GLF_event.4.d:0 "Building upon the foundation of consolidating rural collectivization, the development outline has formulated target indicators for increasing grain production based on the different natural conditions and economic situations in various regions. It has also issued complementary tasks such as afforestation, pest control, advocating family planning, and strengthening educational efforts. Concerning the improvement of grain production, a comprehensive plan for various agricultural development measures has been systematically outlined. This includes the promotion of high-quality seeds, expanding the sown area, improving agricultural tools, and enhancing water conservation facilities. Simultaneously, emphasis has been placed on the necessity of countering conservative sentiments and boosting the proactive attitude of farmers. The development outline emphasizes the need to tap into the production potential in rural areas to achieve the set targets."
+ PRC_GLF_event.4.a:0 "The goal is to double the agricultural output within twelve years!"
+ PRC_GLF_event.5.t:0 "Inquiry at the Beidaihe Conference"
+ PRC_GLF_event.5.d:0 "The Central Political Bureau of the CPC held an expanded meeting in Beidaihe, where the main topics of discussion included the establishment of rural people's communes, educational reforms, and the implementation of the steel production target set in June, among other issues. The steel production target was set at 10.7 million tons, twice the output of the previous year. Faced with suspicion from [SOV.GetLeader] and other senior Soviet leaders, Mao Zedong requested assurances from various ministries and enterprise leaders that the target of 10.7 million tons would be achieved this year. After assurances from party secretaries and industrial leaders, the People's Daily issued a conference communiqué nationwide, calling on the entire population to strive for the production goal of 10.7 million tons of steel."
+ PRC_GLF_event.5.a:0 ""Comrade Chairman, doubling the output is not a problem.""
+ PRC_GLF_event.6.t:0 "Forward with the Overwhelming East Wind"
+ PRC_GLF_event.6.d:0 "On New Year's Day in 1958, the People's Daily published an editorial summarizing the achievements of the socialist movement in 1957 and the global national democratic movements. It also emphasized the need to continue the rectification movement and socialist construction to achieve the goals of the twelve-year plan for rural development. The editorial stated, "With the successful completion of the First Five-Year Plan and the support of other favorable conditions, we must be full of enthusiasm, strive to forge ahead, unleash revolutionary enthusiasm and optimism, and strive for a great leap forward and a bountiful harvest in agricultural production in 1958, aiming to achieve the magnificent goal of building socialism and communism, constructing a powerful modern industry, modern agriculture, and advanced science and culture!"The editorial also mentioned various inspiring slogans, such as "March forward with the communist spirit to overwhelm the rightists, bureaucracy, and conservative thinking.""
+ PRC_GLF_event.6.a:0 "One Day as Twenty Years."
  PRC_GLF_event.7.t:0 "Chusihai"
  PRC_GLF_event.7.d:0 ""
  PRC_GLF_event.7.a:0 ""
