--- a/PRC1949-1960/localisation/english/focus_PRC_50s_Rework_l_english.yml
+++ b/PRC1949-1960/localisation/english/focus_PRC_50s_Rework_l_english.yml
@@ -161,8 +161,8 @@
  PRC_50s_Adopt_The_New_People_s_Constitution_desc:0 ""
  PRC_50s_Conduct_Elections_at_The_Basic_Level:0 "Conduct Elections at the Basic Level"
  PRC_50s_Conduct_Elections_at_The_Basic_Level_desc:0 ""
- PRC_50s_Classify_Peasant_as_Semiproletariat:0 "Classify Peasant as Semi-proletariat"
- PRC_50s_Classify_Peasant_as_Semiproletariat_desc:0 ""
+ PRC_50s_Classify_Peasant_as_Semi-proletariat:0 "Classify Peasant as Semi-proletariat"
+ PRC_50s_Classify_Peasant_as_Semi-proletariat_desc:0 ""
  PRC_50s_Be_Wary_of_Spontaneous_Tendencies_Towards_Capitalism_among_Peasants:0 "Be Wary of Spontaneous Tendencies Towards Capitalism among Peasants"
  PRC_50s_Be_Wary_of_Spontaneous_Tendencies_Towards_Capitalism_among_Peasants_desc:0 ""
  PRC_50s_Negate_Agricultral_Socialism:0 "Negate Agricultral Socialism"
@@ -219,10 +219,10 @@
  PRC_50s_Strictly_Restrain_The_Struggle_against_landlord_desc:0 ""
  PRC_50s_Co-operative_Transformation_of_Agriculture:0 "Co-operative Transformation of Agriculture"
  PRC_50s_Co-operative_Transformation_of_Agriculture_desc:0 ""
- PRC_50s_Accelerate_The_Process_of_Cooperation:0 "Accelerate the Process of Co-operation"
- PRC_50s_Accelerate_The_Process_of_Cooperation_desc:0 ""
- PRC_50s_Control_The_Process_of_Cooperation:0 "Control the Process of Co-operation"
- PRC_50s_Control_The_Process_of_Cooperation_desc:0 ""
+ PRC_50s_Accelerate_The_Process_of_Co-operation:0 "Accelerate the Process of Co-operation"
+ PRC_50s_Accelerate_The_Process_of_Co-operation_desc:0 ""
+ PRC_50s_Control_The_Process_of_Co-operation:0 "Control the Process of Co-operation"
+ PRC_50s_Control_The_Process_of_Co-operation_desc:0 ""
  PRC_50s_Complete_Rural_Co-operation:0 "Complete Rural Co-operation"
  PRC_50s_Complete_Rural_Co-operation_desc:0 ""
  PRC_50s_Unite_The_National_Bourgeoisie:0 "Unite the National Bourgeoisie"
@@ -473,6 +473,8 @@
  PRC_50s_Liberate_The_Democratic_Parties_desc:0 ""
  PRC_50s_Abolish_literary_And_Art_Censorship:0 "Abolish literary And Art Censorship"
  PRC_50s_Abolish_literary_And_Art_Censorship_desc:0 ""
+ PRC_50s_Organise_Local_Elections:0 "Organise Local Elections"
+ PRC_50s_Organise_Local_Elections_desc:0 ""
  PRC_50s_Adopt_Hu_Feng_s_Report:0 "Adopt Hu Feng's Report"
  PRC_50s_Adopt_Hu_Feng_s_Report_desc:0 ""
  PRC_50s_Refuse_The_Party_Committee_to_Lead_Everything:0 "Refuse the Party Committee to Lead Everything"
@@ -481,8 +483,8 @@
  PRC_50s_Establish_A_Truly_Democratic_Regime_desc:0 ""
  PRC_50s_Suppress_Internal_Hungary_Elements:0 "Suppress Internal Hungary Elements"
  PRC_50s_Suppress_Internal_Hungary_Elements_desc:0 ""
- PRC_50s_Suppress_Internal_Antiparty_Elements:0 "Suppress Internal Anti-party Elements"
- PRC_50s_Suppress_Internal_Antiparty_Elements_desc:0 ""
+ PRC_50s_Suppress_Internal_Anti-party_Elements:0 "Suppress Internal Anti-party Elements"
+ PRC_50s_Suppress_Internal_Anti-party_Elements_desc:0 ""
  PRC_50s_Prepare_to_Counter-offense_Against_The_Counter-revolutionaries:0 "Prepare to Counter-offense Against the Counter-revolutionaries"
  PRC_50s_Prepare_to_Counter-offense_Against_The_Counter-revolutionaries_desc:0 ""
  PRC_50s_Classify_Right_Elements:0 "Classify Right Elements"
@@ -503,8 +505,8 @@
  PRC_50s_Expand_The_Labour_Farm_desc:0 ""
  PRC_50s_Abolish_The_Line_of_the_8th_NCCPC:0 "Abolish the Line of the 8th NCCPC"
  PRC_50s_Abolish_The_Line_of_the_8th_NCCPC_desc:0 ""
- PRC_50s_Insist_on_Selfcriticism:0 "Insist on Self-criticism"
- PRC_50s_Insist_on_Selfcriticism_desc:0 ""
+ PRC_50s_Insist_on_Self-criticism:0 "Insist on Self-criticism"
+ PRC_50s_Insist_on_Self-criticism_desc:0 ""
  PRC_50s_Be_Wary_of_liberalization_Tendency_within_The_Party:0 "Be Wary of liberalization Tendency within the Party"
  PRC_50s_Be_Wary_of_liberalization_Tendency_within_The_Party_desc:0 ""
  PRC_50s_Reinforce_Leadership_Authority:0 "Reinforce Leadership Authority"
@@ -525,27 +527,27 @@
 
  PRC_50s_Empower_Local_Governments:0 "Empower Local Governments"
  PRC_50s_Empower_Local_Governments_desc:0 ""
- PRC_50s_Promote_The_Pilot_Field_System:0 "Promote the Pilot Field System"
+ PRC_50s_Promote_The_Pilot_Field_System:0 "Promote The Test Field System"
  PRC_50s_Promote_The_Pilot_Field_System_desc:0 ""
- PRC_50s_Strengthen_The_Household_System:0 "Strengthen the Household System"
+ PRC_50s_Strengthen_The_Household_System:0 "Strength Household Registration Policy"
  PRC_50s_Strengthen_The_Household_System_desc:0 ""
- PRC_50s_Launch_Local_Industry:0 "Launch Local Industry"
+ PRC_50s_Launch_Local_Industry:0 "Mobilize Local Industry"
  PRC_50s_Launch_Local_Industry_desc:0 ""
- PRC_50s_Anti-waste_And_Anti-conservative_Campaign:0 "Anti-waste And Anti-conservative Campaign"
+ PRC_50s_Anti-waste_And_Anti-conservative_Campaign:0 "Movement Against Waste and Conservation"
  PRC_50s_Anti-waste_And_Anti-conservative_Campaign_desc:0 ""
  PRC_50s_Dominate_Nature:0 "Dominate Nature"
  PRC_50s_Dominate_Nature_desc:0 "Dominate Nature"
- PRC_50s_Harness_Nature:0 "Harness Nature"
+ PRC_50s_Harness_Nature:0 "Steer Nature"
  PRC_50s_Harness_Nature_desc:0 ""
  PRC_50s_Increase_Food_Procurement:0 "Increase Food Procurement"
  PRC_50s_Increase_Food_Procurement_desc:0 ""
  PRC_50s_Agro-industrial_Double_Super_Campaign:0 "Agro-industrial Double Super Campaign"
  PRC_50s_Agro-industrial_Double_Super_Campaign_desc:0 ""
- PRC_50s_Bust_Technical_Myths:0 "Bust Technical Myths"
+ PRC_50s_Bust_Technical_Myths:0 "Break down Blind Faith in Technology"
  PRC_50s_Bust_Technical_Myths_desc:0 ""
  PRC_50s_Emphasis_on_Class_Struggle:0 "Emphasis on Class Struggle"
  PRC_50s_Emphasis_on_Class_Struggle_desc:0 ""
- PRC_50s_Launch_A_Catch-up_Campaign:0 "Launch A Catch-up Campaign"
+ PRC_50s_Launch_A_Catch-up_Campaign:0 "Launch Catch-up Campaign"
  PRC_50s_Launch_A_Catch-up_Campaign_desc:0 ""
  PRC_50s_Set_Targets_for_Hyper-industrialisation:0 "Set Targets for Hyper-industrialisation"
  PRC_50s_Set_Targets_for_Hyper-industrialisation_desc:0 ""
@@ -555,13 +557,13 @@
  PRC_50s_Control_Social_Corners_desc:0 ""
  PRC_50s_Launch_The_Heart_to_Heart_Campaign:0 "Launch the Heart to Heart Campaign"
  PRC_50s_Launch_The_Heart_to_Heart_Campaign_desc:0 ""
- PRC_50s_Sruggle_with_Guanchao_Faction:0 "Sruggle with \"GuanChao\" Faction"
+ PRC_50s_Sruggle_with_Guanchao_Faction:0 "Sruggle with Onlookers"
  PRC_50s_Sruggle_with_Guanchao_Faction_desc:0 ""
- PRC_50s_Temporarily_Compress_Air:0 "Temporarily Compress Air"
+ PRC_50s_Temporarily_Compress_Air:0 "Temporary Suppress Passion"
  PRC_50s_Temporarily_Compress_Air_desc:0 ""
- PRC_50s_Debate_with_The_Opposition:0 "Debate with the Opposition"
+ PRC_50s_Debate_with_The_Opposition:0 "Controversy over Opposition"
  PRC_50s_Debate_with_The_Opposition_desc:0 ""
- PRC_50s_Integrated_Use_of_Food:0 "Integrated Use of Food"
+ PRC_50s_Integrated_Use_of_Food:0 "Multiple Utilization of Grain"
  PRC_50s_Integrated_Use_of_Food_desc:0 ""
  PRC_50s_Take_Back_Wrong_Support_of_Science:0 "Take Back Wrong Support of Science"
  PRC_50s_Take_Back_Wrong_Support_of_Science_desc:0 ""
@@ -569,15 +571,15 @@
  PRC_50s_The_Great_Leap_Forward_desc:0 ""
  PRC_50s_Reinforce_Party_Control_over_Government:0 "Reinforce Party Control over Government"
  PRC_50s_Reinforce_Party_Control_over_Government_desc:0 ""
- PRC_50s_Streamline_The_Central_Ministries_And_Commissions:0 "Streamline the Central Ministries And Commissions"
- PRC_50s_Streamline_The_Central_Ministries_And_Commissions_desc:0 ""
+ PRC_50s_Streamline_The_Central_Ministries_and_Commissions:0 "Shrink the Central Ministries and Commissions"
+ PRC_50s_Streamline_The_Central_Ministries_and_Commissions_desc:0 ""
  PRC_50s_Respond_to_Local_Dilemmas:0 "Respond to Local Dilemmas"
  PRC_50s_Respond_to_Local_Dilemmas_desc:0 ""
  PRC_50s_Encourage_An_Increase_in_Production:0 "Encourage An Increase in Production"
  PRC_50s_Encourage_An_Increase_in_Production_desc:0 ""
  PRC_50s_Standardize_Local_Bureaucrats:0 "Standardize Local Bureaucrats"
  PRC_50s_Standardize_Local_Bureaucrats_desc:0 ""
- PRC_50s_Great_Steelmaking_Movement:0 "Great Steelmaking Movement"
+ PRC_50s_Great_Steelmaking_Movement:0 "Great Steelmaking Campaign"
  PRC_50s_Great_Steelmaking_Movement_desc:0 ""
  PRC_50s_Lower_Targets:0 "Lower Targets"
  PRC_50s_Lower_Targets_desc:0 ""
@@ -595,7 +597,7 @@
  PRC_50s_Strengthen_The_Unified_Purchasing_And_Marketing_desc:0 ""
  PRC_50s_Reduce_Agricultural_Scissor_Difference:0 "Reduce Agricultural Scissor Difference"
  PRC_50s_Reduce_Agricultural_Scissor_Difference_desc:0 ""
- PRC_50s_Indigenous_Steelmaking:0 "Indigenous Steelmaking"
+ PRC_50s_Indigenous_Steelmaking:0 "Promote Backyard Furnace"
  PRC_50s_Indigenous_Steelmaking_desc:0 ""
  PRC_50s_Ensure_Rural_Food_Security:0 "Ensure Rural Food Security"
  PRC_50s_Ensure_Rural_Food_Security_desc:0 ""
@@ -609,7 +611,7 @@
  PRC_50s_Set_up_Part-time_Schools_desc:0 ""
  PRC_50s_Reduce_Production_Waste:0 "Reduce Production Waste"
  PRC_50s_Reduce_Production_Waste_desc:0 ""
- PRC_50s_Sudden_Acquisitions_of_Grain:0 "Sudden Acquisitions of Grain"
+ PRC_50s_Sudden_Acquisitions_of_Grain:0 "Assault Procurement of Grain Movement"
  PRC_50s_Sudden_Acquisitions_of_Grain_desc:0 ""
  PRC_50s_People_s_Commune_Movement:0 "People's Commune Movement"
  PRC_50s_People_s_Commune_Movement_desc:0 ""
