--- a/PRC1949-1960/localisation/simp_chinese/GUI_PRC_Generic_l_simp_chinese.yml
+++ b/PRC1949-1960/localisation/simp_chinese/GUI_PRC_Generic_l_simp_chinese.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+﻿l_simp_chinese:
  PRC_Classes_And_Strata_decision_category:0 "阶级与阶层"
  PRC_Classes_And_Strata_decision_category_desc:0 "141g1g.1g1g...."
  PRC_Party_s_Authority_text:0 "中国共产党的权威 [?PRC_Party_s_Authority_var|1%]"
