--- a/PRC1949-1960/localisation/simp_chinese/focus_PRC_50s_Rework_l_simp_chinese.yml
+++ b/PRC1949-1960/localisation/simp_chinese/focus_PRC_50s_Rework_l_simp_chinese.yml
@@ -125,7 +125,7 @@
  PRC_50s_Purify_The_Party_Rank_desc:0 ""
  PRC_50s_Reclaim_Foreign_Funding_Agencies:0 "收回外国资助机构"
  PRC_50s_Reclaim_Foreign_Funding_Agencies_desc:0 ""
- PRC_50s_Catholic_Patriotic_Rehabilitation_Movement:0 "天主教徒自信爱国运动"
+ PRC_50s_Catholic_Patriotic_Rehabilitation_Movement:0 "天主教徒自新爱国运动"
  PRC_50s_Catholic_Patriotic_Rehabilitation_Movement_desc:0 ""
  PRC_50s_Transforming_Old_Bureaucrats:0 "改造旧官僚"
  PRC_50s_Transforming_Old_Bureaucrats_desc:0 ""
@@ -175,7 +175,7 @@
  PRC_50s_Advocate_Factory_Director_Responsibility_System_desc:0 ""
  PRC_50s_Adhere_to_The_Party_Committee_Responsibility_System:0 "坚持党委责任制"
  PRC_50s_Adhere_to_The_Party_Committee_Responsibility_System_desc:0 ""
- PRC_50s_Move_Towards_Socialism:0 "向着社会主义迈进"
+ PRC_50s_Move_Towards_Socialism:0 "向着社会主义前进！"
  PRC_50s_Move_Towards_Socialism_desc:0 ""
  PRC_50s_Boost_Economic_Confidence:0 "增强经济信心"
  PRC_50s_Boost_Economic_Confidence_desc:0 ""
@@ -543,15 +543,15 @@
  PRC_50s_Bust_Technical_Myths_desc:0 ""
  PRC_50s_Emphasis_on_Class_Struggle:0 "强调阶级斗争"
  PRC_50s_Emphasis_on_Class_Struggle_desc:0 ""
- PRC_50s_Launch_A_Catch-up_Campaign:0 "发动赶超运动"
+ PRC_50s_Launch_A_Catch-up_Campaign:0 "赶超运动"
  PRC_50s_Launch_A_Catch-up_Campaign_desc:0 ""
  PRC_50s_National_Electrification_Campaign:0 "全国电气化运动"
  PRC_50s_National_Electrification_Campaign_desc:0 ""
  PRC_50s_Set_Targets_for_Hyper-industrialisation:0 "制定超工业化目标"
  PRC_50s_Set_Targets_for_Hyper-industrialisation_desc:0 ""
- PRC_50s_Control_Social_Corners:0 "控制社会角落"
+ PRC_50s_Control_Social_Corners:0 "掌控社会角落"
  PRC_50s_Control_Social_Corners_desc:0 ""
- PRC_50s_Launch_The_Heart_to_Heart_Campaign:0 "发起交心运动"
+ PRC_50s_Launch_The_Heart_to_Heart_Campaign:0 "交心运动"
  PRC_50s_Launch_The_Heart_to_Heart_Campaign_desc:0 ""
  PRC_50s_Sruggle_with_Guanchao_Faction:0 "与\"观潮派\"作斗争"
  PRC_50s_Sruggle_with_Guanchao_Faction_desc:0 ""
@@ -565,10 +565,10 @@
  PRC_50s_Take_Back_Wrong_Support_of_Science_desc:0 ""
  PRC_50s_The_Great_Leap_Forward:0 "大跃进"
  PRC_50s_The_Great_Leap_Forward_desc:0 ""
- PRC_50s_Reinforce_Party_Control_over_Government:0 "加强党对政府的控制"
+ PRC_50s_Reinforce_Party_Control_over_Government:0 "党政一体化"
  PRC_50s_Reinforce_Party_Control_over_Government_desc:0 ""
- PRC_50s_Streamline_The_Central_Ministries_And_Commissions:0 "缩减中央部委"
- PRC_50s_Streamline_The_Central_Ministries_And_Commissions_desc:0 ""
+ PRC_50s_Streamline_The_Central_Ministries_and_Commissions:0 "精简中央部委"
+ PRC_50s_Streamline_The_Central_Ministries_and_Commissions_desc:0 ""
  PRC_50s_Respond_to_Local_Dilemmas:0 "应对地方困难"
  PRC_50s_Respond_to_Local_Dilemmas_desc:0 ""
  PRC_50s_Encourage_An_Increase_in_Production:0 "鼓励提高产量"
@@ -583,7 +583,7 @@
  PRC_50s_Protect_The_Spirit_of_Leap_Forward_desc:0 ""
  PRC_50s_Promote_The_Eight-character_Constitution:0 "推广\"八字宪法\""
  PRC_50s_Promote_The_Eight-character_Constitution_desc:0 ""
- PRC_50s_Raise_Expected_Targets:0 "提高预期指标s"
+ PRC_50s_Raise_Expected_Targets:0 "提高预期指标"
  PRC_50s_Raise_Expected_Targets_desc:0 ""
  PRC_50s_Maintain_Original_Targets:0 "维持原有指标"
  PRC_50s_Maintain_Original_Targets_desc:0 ""
@@ -595,9 +595,9 @@
  PRC_50s_Reduce_Agricultural_Scissor_Difference_desc:0 ""
  PRC_50s_Indigenous_Steelmaking:0 "鼓励土法炼钢"
  PRC_50s_Indigenous_Steelmaking_desc:0 ""
- PRC_50s_Ensure_Rural_Food_Security:0 "确保农村粮食安全"
+ PRC_50s_Ensure_Rural_Food_Security:0 "保障农村粮食安全"
  PRC_50s_Ensure_Rural_Food_Security_desc:0 ""
- PRC_50s_Prioritise_Urban_Food_Supply:0 "优先城市粮食供应"
+ PRC_50s_Prioritise_Urban_Food_Supply:0 "优先城市供粮"
  PRC_50s_Prioritise_Urban_Food_Supply_desc:0 ""
  PRC_50s_Campaign_to_Oppose_Share_out_in_Private_the_Harvests_They_Concealed:0 "反瞒产私分运动"
  PRC_50s_Campaign_to_Oppose_Share_out_in_Private_the_Harvests_They_Concealed_desc:0 ""
