建国线图标完成

--- a/PRC1949-1960/localisation/simp_chinese/focus_PRC_50s_Rework_l_simp_chinese.yml
+++ b/PRC1949-1960/localisation/simp_chinese/focus_PRC_50s_Rework_l_simp_chinese.yml
@@ -171,11 +171,11 @@
  PRC_50s_Advocate_Independent_Labour_Union_desc:0 ""
  PRC_50s_Insist_on_State_Control_of_Labour_Union:0 "坚持政府控制工会"
  PRC_50s_Insist_on_State_Control_of_Labour_Union_desc:0 ""
- PRC_50s_Advocate_Factory_Director_Responsibility_System:0 "提倡厂长责任制"
+ PRC_50s_Advocate_Factory_Director_Responsibility_System:0 "推行厂长责任制"
  PRC_50s_Advocate_Factory_Director_Responsibility_System_desc:0 ""
  PRC_50s_Adhere_to_The_Party_Committee_Responsibility_System:0 "坚持党委责任制"
  PRC_50s_Adhere_to_The_Party_Committee_Responsibility_System_desc:0 ""
- PRC_50s_Move_Towards_Socialism:0 "向着社会主义前进！"
+ PRC_50s_Move_Towards_Socialism:0 "向社会主义前进！"
  PRC_50s_Move_Towards_Socialism_desc:0 ""
  PRC_50s_Boost_Economic_Confidence:0 "增强经济信心"
  PRC_50s_Boost_Economic_Confidence_desc:0 ""
@@ -183,9 +183,9 @@
  PRC_50s_Guarantee_Private_Factory_Orders_desc:0 ""
  PRC_50s_Expand_China_s_Railway_Network:0 "扩展中国铁路网"
  PRC_50s_Expand_China_s_Railway_Network_desc:0 ""
- PRC_50s_Launch_Electrification_Campaign:0 "开展电气化运动"
+ PRC_50s_Launch_Electrification_Campaign:0 "推进电气化"
  PRC_50s_Launch_Electrification_Campaign_desc:0 ""
- PRC_50s_Exploit_China_s_Resources:0 "开发中国资源"
+ PRC_50s_Exploit_China_s_Resources:0 "开发中国矿产资源"
  PRC_50s_Exploit_China_s_Resources_desc:0 ""
  PRC_50s_Confiscate_Bureaucratic_Capital_Enterprises:0 "没收官僚资本主义企业"
  PRC_50s_Confiscate_Bureaucratic_Capital_Enterprises_desc:0 ""
@@ -249,9 +249,9 @@
  PRC_50s_Flat_The_Economic_Sector_desc:0 ""
  PRC_50s_Limit_The_Power_of_The_Planning_Commission:0 "限制计委权力"
  PRC_50s_Limit_The_Power_of_The_Planning_Commission_desc:0 ""
- PRC_50s_Reclaim_Economic_Power_to_The_Planning_Commission:0 "收归经济权力到计委"
+ PRC_50s_Reclaim_Economic_Power_to_The_Planning_Commission:0 "经济权力收归计委"
  PRC_50s_Reclaim_Economic_Power_to_The_Planning_Commission_desc:0 ""
- PRC_50s_Public-Private_Partnership_by_Whole_Trades:0 "实现全行业公私合营"
+ PRC_50s_Public-Private_Partnership_by_Whole_Trades:0 "实行全行业公私合营"
  PRC_50s_Public-Private_Partnership_by_Whole_Trades_desc:0 ""
  PRC_50s_Establish_Socialist_System:0 "确立社会主义制度"
  PRC_50s_Establish_Socialist_System_desc:0 ""
