--- a/PRC1949-1960/localisation/simp_chinese/others_PRC_50s_Rework_l_simp_chinese.yml
+++ b/PRC1949-1960/localisation/simp_chinese/others_PRC_50s_Rework_l_simp_chinese.yml
@@ -348,3 +348,17 @@
  PRC_mitigate_famine_risk_tt:0 "§减少§!§Y地方饥荒风险§!."
 
  PRC_50s_first_fyp_flag:0 "It has been 50 days since the last completion of the first five-year Plan focus"
+
+
+
+
+
+
+
+PRC_tiaoshi_jueyi_categories:0 "PRC调试决议"
+PRC_unlock_49_60_focus:0 "载入49-60年国策"
+PRC_unlock_Liberation_War_focus:0 "解放战争阶段国策"
+PRC_unlock_Transition_Period_focus:0 "过渡时期阶段国策"
+PRC_unlock_Two_Hundred_focus:0 "双百运动阶段国策"
+PRC_unlock_GFL_focus:0 "大跃阶段国策"
+PRC_unlock_Lushan_focus:0 "庐山会议阶段国策"
