--- a/PRC1949-1960/localisation/english/others_PRC_50s_Rework_l_english.yml
+++ b/PRC1949-1960/localisation/english/others_PRC_50s_Rework_l_english.yml
@@ -352,3 +352,13 @@
 
  unlock_focuses:0 "§GThis focus will eventually be automatically bypassed and will unlock the other focuses§!"
  tooltip_focus_unlocked_by_event:0 "§GThis focus will be automatically unlocked via event§!"
+
+
+
+PRC_tiaoshi_jueyi_categories:0 "PRC tiaoshi jueyi"
+PRC_unlock_49_60_focus:0 "zairu 49-60nian guoceshu"
+PRC_unlock_Liberation_War_focus:0 "jiefangzhanzheng jieduanguoce"
+PRC_unlock_Transition_Period_focus:0 "guodushiqi jieduanguoce"
+PRC_unlock_Two_Hundred_focus:0 "shuangbaiyundong jieduanguoce"
+PRC_unlock_GFL_focus:0 "dayuejin jieduanguoce"
+PRC_unlock_Lushan_focus:0 "lushanhuiyi jieduanguoce"
