--- a/PRC1949-1960/localisation/simp_chinese/others_PRC_50s_Rework_l_simp_chinese.yml
+++ b/PRC1949-1960/localisation/simp_chinese/others_PRC_50s_Rework_l_simp_chinese.yml
@@ -206,7 +206,7 @@
  PRC_Growing_Administration_Integration:0 "日益增长的行政整合"
  PRC_Low_Administration_Integration:0 "低行政整合度"
 
-
+ PRC_50s_Boost_Economic_Confidence:0 "经济恢复"
  PRC_50s_attack_kmt:0 "进攻国民党"
  PRC_50s_Food_supply_crisis:0 "食品供应危机"
  PRC_50s_Complete_Rural_Co_operation:0 "完成农业合作化"
