--- a/PRC1949-1960/localisation/english/others_PRC_50s_Rework_l_english.yml
+++ b/PRC1949-1960/localisation/english/others_PRC_50s_Rework_l_english.yml
@@ -204,7 +204,7 @@
  PRC_Growing_Administration_Integration:0 "Growing Administration Integration"
  PRC_Low_Administration_Integration:0 "Low Administration Integration"
 
-
+ PRC_50s_Boost_Economic_Confidence:0 "National Economic Recovery"
  PRC_50s_attack_kmt:0 "Attack Kuomintang"
  PRC_50s_Food_supply_crisis:0 "Food Supply Crisis"
  PRC_50s_Complete_Rural_Co_operation:0 "Accomplish Agricultural Co-operation"
